--- a/src/login.html
+++ b/src/login.html
@@ -14,7 +14,7 @@
       <div class="main-c">
         <div class="header">
           <div class="header-title">
-            <img src="./images/logo-mi2.png" alt="" />
+            <img src="./img/logo-mi2.png" alt="" />
             <h1>小米账号</h1>
           </div>
           <div class="mi-nav">
@@ -53,7 +53,7 @@
             <p>其他方式登录</p>
           </div>
           <div class="login-1">
-            <img src="images/login-1.png" alt="" />
+            <img src="img/login-1.png" alt="" />
           </div>
         </div>
         <div class="footer">
