--- a/src/regist.html
+++ b/src/regist.html
@@ -12,7 +12,7 @@
     <div class="main">
       <div class="main-c">
         <div class="logo">
-          <img src="images/logo-mi2.png" alt="" />
+          <img src="img/logo-mi2.png" alt="" />
         </div>
         <div class="title">注册小米账号</div>
         <div class="regist">
@@ -47,7 +47,7 @@
       <div class="info">
         <a href="">
           小米公司版权所有-京ICP备10046444-<span
-            ><img src="images/pl.png" alt="" /></span
+            ><img src="img/pl.png" alt="" /></span
           >京公网安备11010802020134号-京ICP证110507号
         </a>
       </div>
