--- a/src/shoppingCart.html
+++ b/src/shoppingCart.html
@@ -13,7 +13,7 @@
       <div class="header-c">
         <div class="hlogo">
           <a href="">
-            <img src="images/logo-mi2.png" alt="" />
+            <img src="img/logo-mi2.png" alt="" />
           </a>
         </div>
         <div class="info">
@@ -22,14 +22,75 @@
         </div>
         <div class="login">
           <div class="user">
-            <div>揍鸡</div>
+            <div>
+              <a href=""> 揍鸡 </a>
+            </div>
             <span>|</span>
-            <div>我的订单</div>
+            <div>
+              <a href=""> 我的订单 </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="main"></div>
+    <div class="main">
+      <div class="main-c">
+        <!-- 头部全选 -->
+        <div class="cart-thead">
+          <div class="t-checkbox">
+            <input type="checkbox" class="checkAll ck" />
+            <p>全选</p>
+          </div>
+          <div class="t-goods">商品名称</div>
+          <div class="t-price">价格</div>
+          <div class="t-num">数量</div>
+          <div class="t-sum">小计</div>
+          <div class="t-action">操作</div>
+        </div>
+        <!-- 商品列表 -->
+        <div class="cart-item-list">
+          <!-- 每个商品 -->
+          <div class="cart-item">
+            <div class="p-checkbox">
+              <input type="checkbox" class="ck" />
+            </div>
+            <div class="p-img">
+              <img src="img/tizhongcheng.jpg" alt="" />
+            </div>
+            <div class="p-name">小米体重秤2白色</div>
+            <div class="p-price">59元</div>
+            <div class="p-num">
+                <div class="change-goods-num">
+                    <a href="javascript:void(0)" class="decrement">-</a>
+                    <input type="text" class="itxt" value="1">
+                    <a href="javascript:void(0)" class="increment">+</a>
+                </div>
+          </div>
+          <div class="p-sum">59元</div>
+          <div class="p-action"><a href="javascript:void(0)">x</a></div>
+        </div>
+
+        <div class="cart-item">
+            <div class="p-checkbox">
+              <input type="checkbox" class="ck" />
+            </div>
+            <div class="p-img">
+              <img src="img/tizhongcheng.jpg" alt="" />
+            </div>
+            <div class="p-name">小米体重秤2白色</div>
+            <div class="p-price">59元</div>
+            <div class="p-num">
+                <div class="change-goods-num">
+                    <a href="javascript:void(0)" class="decrement">-</a>
+                    <input type="text" class="itxt" value="1">
+                    <a href="javascript:void(0)" class="increment">+</a>
+                </div>
+          </div>
+          <div class="p-sum">59元</div>
+          <div class="p-action"><a href="javascript:void(0)">x</a></div>
+        </div>
+      </div>
+    </div>
     <div class="more"></div>
   </body>
 </html>
