--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
       <div class="site-header">
         <div class="containe">
           <div class="header-logo">
-            <img src="./images/logo-mi2.png" alt="">
+            <img src="./img/logo-mi2.png" alt="">
             <a href="https://www.mi.com">官网</a>
           </div>
           <div class="header-nav">
@@ -202,27 +202,27 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner img" role="listbox">
               <div class="item active">
-                <img src="./images/banner-1.jpg"  alt="...">
+                <img src="./img/banner-1.jpg"  alt="...">
                 <div class="carousel-caption">
                 </div>
               </div>
               <div class="item">
-                <img src="./images/banner-2.jpg" alt="...">
+                <img src="./img/banner-2.jpg" alt="...">
                 <div class="carousel-caption">
                 </div>
               </div>
               <div class="item">
-                <img src="./images/banner-3.jpg" alt="...">
+                <img src="./img/banner-3.jpg" alt="...">
                 <div class="carousel-caption">
                 </div>
               </div>
               <div class="item">
-                <img src="./images/banner-4.jpg" alt="...">
+                <img src="./img/banner-4.jpg" alt="...">
                 <div class="carousel-caption">
                 </div>
               </div>
               <div class="item">
-                <img src="./images/banner-5.jpeg" alt="...">
+                <img src="./img/banner-5.jpeg" alt="...">
                 <div class="carousel-caption">
                 </div>
               </div>
@@ -287,17 +287,17 @@
           <ul class="channel-img">
             <li>
               <a href="">
-              <img src="./images/ul-1.jpg" alt="">
+              <img src="./img/ul-1.jpg" alt="">
             </a>
             </li>
             <li>
               <a href="">
-              <img src="./images/ul-2.jpg" alt="">
+              <img src="./img/ul-2.jpg" alt="">
             </a>
             </li>
             <li>
               <a href="">
-              <img src="./images/ul-3.jpg" alt="">
+              <img src="./img/ul-3.jpg" alt="">
             </a>
             </li>
           </ul>
@@ -321,7 +321,7 @@
                   <li>
                     <a href="">
                       <div class="seckill-img">
-                        <img src="./images/miaosha-1.png" alt="">
+                        <img src="./img/miaosha-1.png" alt="">
                       </div>
                       <h3 class="img-title">米兔智能故事机 白色</h3>
                       <p class="img-t2">能说会道，好玩伴</p>
@@ -333,7 +333,7 @@
                   <li>
                     <a href="">
                       <div class="seckill-img">
-                        <img src="./images/miaosha-1.png" alt="">
+                        <img src="./img/miaosha-1.png" alt="">
                       </div>
                       <h3 class="img-title">米兔智能故事机 白色</h3>
                       <p class="img-t2">能说会道，好玩伴</p>
@@ -345,7 +345,7 @@
                   <li>
                     <a href="">
                       <div class="seckill-img">
-                        <img src="./images/miaosha-1.png" alt="">
+                        <img src="./img/miaosha-1.png" alt="">
                       </div>
                       <h3 class="img-title">米兔智能故事机 白色</h3>
                       <p class="img-t2">能说会道，好玩伴</p>
@@ -357,7 +357,7 @@
                   <li>
                     <a href="">
                       <div class="seckill-img">
-                        <img src="./images/miaosha-1.png" alt="">
+                        <img src="./img/miaosha-1.png" alt="">
                       </div>
                       <h3 class="img-title">米兔智能故事机 白色</h3>
                       <p class="img-t2">能说会道，好玩伴</p>
@@ -369,7 +369,7 @@
                   <li>
                     <a href="">
                       <div class="seckill-img">
-                        <img src="./images/miaosha-1.png" alt="">
+                        <img src="./img/miaosha-1.png" alt="">
                       </div>
                       <h3 class="img-title">米兔智能故事机 白色</h3>
                       <p class="img-t2">能说会道，好玩伴</p>
@@ -386,7 +386,7 @@
 
           </div>
             <div class="d1">
-              <img src="./images/d1.jpg" alt="">
+              <img src="./img/d1.jpg" alt="">
             </div>
             <div class="phone">
               <div class="title">
@@ -395,14 +395,14 @@
               <div class="c-list">
                 <div class="list-left">
                   <a href="">
-                    <img src="./images/secondp1.jpeg" alt="">
+                    <img src="./img/secondp1.jpeg" alt="">
                   </a>
                 </div>
                 <div class="list-right">
                   <ul>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -412,7 +412,7 @@
                     </li>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -422,7 +422,7 @@
                     </li>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -432,7 +432,7 @@
                     </li>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -442,7 +442,7 @@
                     </li>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -452,7 +452,7 @@
                     </li>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -462,7 +462,7 @@
                     </li>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -472,7 +472,7 @@
                     </li>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -485,7 +485,7 @@
               </div>
             </div>
             <div class="d1">
-              <img src="./images/d2.jpg" alt="">
+              <img src="./img/d2.jpg" alt="">
             </div>
             <div class="homeAppliance">
               <div class="title">
@@ -497,12 +497,12 @@
                     <ul>
                       <li>
                         <a href="">
-                          <img src="./images/jiadian-1.jpg" alt="">
+                          <img src="./img/jiadian-1.jpg" alt="">
                         </a>
                       </li>
                       <li>
                         <a href="">
-                          <img src="./images/jiadian-2.jpeg" alt="">
+                          <img src="./img/jiadian-2.jpeg" alt="">
                         </a>
                       </li>
                       
@@ -513,7 +513,7 @@
                   <ul>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -523,7 +523,7 @@
                     </li>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -533,7 +533,7 @@
                     </li>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -543,7 +543,7 @@
                     </li>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -553,7 +553,7 @@
                     </li>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -563,7 +563,7 @@
                     </li>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -573,7 +573,7 @@
                     </li>
                     <li>
                       <a href="">
-                          <img src="./images/phone-1.png" alt="">
+                          <img src="./img/phone-1.png" alt="">
                           <h3 class="img-title">小米mix fold</h3>
                           <p class="img-t2">能说会道，好玩伴</p>
                           <p class="img-t3">
@@ -585,7 +585,7 @@
                       <ul class="h-more">
                         <li>
                           <a href="">
-                            <img src="./images/jiadian-10.jpg" alt="">
+                            <img src="./img/jiadian-10.jpg" alt="">
                           </a>
                         </li>
                         <li>
@@ -693,7 +693,7 @@
       <div class="site-info">
         <div class="info-c">
           <div class="info-logo">
-            <img src="./images/logo-mi2.png" alt="">
+            <img src="./img/logo-mi2.png" alt="">
           </div>
           <div class="info-text">
           <p>
@@ -751,19 +751,19 @@
         </p>
         <div class="info-img">
           <a href="">
-            <img src="./images/yinsi.png" alt="">
+            <img src="./img/yinsi.png" alt="">
           </a>
           <a href="">
-            <img src="./images/yinsi2.png" alt="">
+            <img src="./img/yinsi2.png" alt="">
           </a>
           <a href="">
-            <img src="./images/yinsi3.png" alt="">
+            <img src="./img/yinsi3.png" alt="">
           </a>
           <a href="">
-            <img src="./images/yinsi4.png" alt="">
+            <img src="./img/yinsi4.png" alt="">
           </a>
           <a href="">
-            <img src="./images/yinsi5.png" alt="">
+            <img src="./img/yinsi5.png" alt="">
           </a>
         </div>
       </div>
