--- a/src/shoppingCart.html
+++ b/src/shoppingCart.html
@@ -69,7 +69,6 @@
           <div class="p-sum">59元</div>
           <div class="p-action"><a href="javascript:void(0)">x</a></div>
         </div>
-
         <div class="cart-item">
             <div class="p-checkbox">
               <input type="checkbox" class="ck" />
@@ -89,6 +88,18 @@
           <div class="p-sum">59元</div>
           <div class="p-action"><a href="javascript:void(0)">x</a></div>
         </div>
+      </div>
+      <!-- 结算 -->
+      <div class="cart-bar">
+          <div class="section-left">
+              <a href="">
+                继续购物
+              </a>
+              <span>|</span>
+              <span>共 <i>1</i>件商品，已选择 <i>1</i>件</span>
+          </div>
+           
+
       </div>
     </div>
     <div class="more"></div>
