--- a/src/shoppingCart.html
+++ b/src/shoppingCart.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="main">
-      <div class="main-c">
+      <div class="main-c clr">
         <!-- 头部全选 -->
         <div class="cart-thead">
           <div class="t-checkbox">
@@ -88,20 +88,36 @@
           <div class="p-sum">59元</div>
           <div class="p-action"><a href="javascript:void(0)">x</a></div>
         </div>
+
+
       </div>
+
+<div class="null"></div>
       <!-- 结算 -->
-      <div class="cart-bar">
-          <div class="section-left">
+      <div class="cart-bar fl">
+          <div class="section-left fl">
               <a href="">
                 继续购物
               </a>
               <span>|</span>
               <span>共 <i>1</i>件商品，已选择 <i>1</i>件</span>
           </div>
-           
-111
+           <div class="section-right fr">
+               <div class="fl totle">
+                   合计: <em>1</em>元
+               </div>
+               <div class="settlement">
+                   <a href="javascript:void(0)">去结算</a>
+               </div>
+           </div>
       </div>
     </div>
-    <div class="more"></div>
+    <div class="more">
+        <div class="more-c">
+            <div class="m-title">
+                买购物车中商品的人还买了
+            </div>
+        </div>
+    </div>
   </body>
 </html>
